--- a/kaggle/titanic/nb_titanic.ipynb
+++ b/kaggle/titanic/nb_titanic.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "288ea3cd-96e8-4ee3-9562-b4c890779e4d",
    "metadata": {},
@@ -65,7 +64,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "05194252",
    "metadata": {},
@@ -89,7 +87,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "3037171c",
    "metadata": {},
@@ -113,7 +110,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "31a86bcc",
    "metadata": {},
@@ -186,7 +182,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "73ff5673",
    "metadata": {},
@@ -207,7 +202,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "8d329289",
    "metadata": {},
@@ -238,7 +232,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "2150a127",
    "metadata": {},
@@ -682,7 +675,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
